--- a/KeyBoardSimulator/mainwindow.ui
+++ b/KeyBoardSimulator/mainwindow.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>456</width>
-    <height>427</height>
+    <height>445</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -73,7 +73,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>150</y>
+      <y>170</y>
       <width>441</width>
       <height>251</height>
      </rect>
@@ -319,7 +319,7 @@
       <x>10</x>
       <y>70</y>
       <width>441</width>
-      <height>81</height>
+      <height>101</height>
      </rect>
     </property>
     <property name="title">
@@ -386,6 +386,9 @@
        <height>20</height>
       </rect>
      </property>
+     <property name="text">
+      <string>17202069088</string>
+     </property>
      <property name="maxLength">
       <number>11</number>
      </property>
@@ -401,6 +404,32 @@
      </property>
      <property name="text">
       <string>Phone:</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="StatusSwitchButton">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>75</y>
+       <width>141</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Enable Status Switch</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="CallingButton">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>76</y>
+       <width>141</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Enable Calling</string>
      </property>
     </widget>
    </widget>
